src/test/ui/feature-gates/feature-gate-doc_spotlight.rs
#[doc(spotlight)] //~ ERROR: #[doc(spotlight)] is experimental
trait SomeTrait {}

fn main() {}
